# batch-channel

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
benches/: alloc.rs  async.rs  throughput.rs  uncontended.rs
results/: 9343.csv  apple-m2-air.csv  atom-d2700.csv  tiamat.csv
s/: check  ci  doc  lint  miri  publish
src/: async.rs  brc.rs  example.md  lib.rs  mutex.rs
tests/: api.rs  async-unbounded.rs  bounded.rs  fixture.rs  iterator.rs  stream.rs  unbounded.rs
