[package]
name = "batch-channel"
version = "0.3.7"
authors = ["Chad Austin <chad@chadaustin.me>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "async channel that reduces overhead by reading and writing many values at once"
repository = "https://github.com/chadaustin/batch-channel"
keywords = ["async", "channel"]
categories = ["asynchronous"]

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
parking_lot = ["pinned-mutex/parking_lot"]
fast = ["parking_lot"]

[dependencies]
futures-core = "0.3"
pin-project = "1.1"
pinned-mutex = "0.3.2"
splitrc = "0.1.11"
wakerset = "0.1"

[dev-dependencies]
anyhow = "1.0.14"
async-channel = "2.2"
async-std = "1.1"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
divan = "0.1.1"
futures = "0.3"
kanal = "0.1.0-pre8"
lazy_static = "1.4"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bench]]
name = "async"
harness = false

[[bench]]
name = "alloc"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "uncontended"
harness = false
